--- a/test_file.html
+++ b/test_file.html
@@ -6,6 +6,10 @@
     <div>
       hey there. this file will change on next version.
     </div>
+    <div style="font-size: 24px; font-weight: bolder;">
+      new version _ 0.2 is pushed from 0.1
+    </div>
+    <hr>
     <div>
       <br>
       <p>
